--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   ],
   "scripts": {
     "start": "web-dev-server --watch",
+    "start:site": "rollup -wc",
+    "build:site": "rollup -c",
     "build": "rimraf -g \"./{exports,internal}/**/*.d.ts\" && tsc && custom-elements-manifest analyze --litelement",
     "deploy:patch": "npm run build && npm version patch && npm publish && git push --follow-tags",
     "deploy:minor": "npm run build && npm version minor && npm publish && git push --follow-tags",
@@ -46,14 +48,18 @@
     "@custom-elements-manifest/analyzer": "^0.8.4",
     "@open-wc/testing-helpers": "^2.3.0",
     "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
     "@web/dev-server": "^0.3.1",
     "@web/dev-server-esbuild": "^0.4.1",
     "@web/dev-server-rollup": "^0.5.2",
+    "@web/rollup-plugin-html": "^2.0.1",
     "@web/test-runner": "^0.17.1",
     "@web/test-runner-playwright": "^0.10.1",
     "custom-elements-manifest": "^2.0.0",
+    "gh-pages": "^6.0.0",
     "light-pen": "link:.",
     "rimraf": "^5.0.1",
+    "rollup": "^3.29.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
