--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,18 +1,18 @@
 # We don't have tests...yet
-# name: Tests
-# on:
-#   push:
-#     branches: [main]
-#   pull_request:
-#     branches: [main]
-# jobs:
-#   test:
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         node-version: [18]
-#     steps:
-#       - uses: actions/checkout@v3
+name: Tests
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18]
+    steps:
+      - uses: actions/checkout@v3
 #       - uses: pnpm/action-setup@v2
 #         with:
 #           version: 8
@@ -21,6 +21,8 @@
 #         with:
 #           node-version: ${{ matrix.node-version }}
 #           cache: 'pnpm'
+#       - name: Install dependencies
+#         run: pnpm install
 #       - name: Install dependencies
 #         run: pnpm install
 #       - name: Install Playwright Browsers
