--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "web-dev-server --watch",
     "start:site": "rollup -wc",
     "build:site": "rollup -c",
-    "build": "rimraf -g \"./{exports,internal}/**/*.d.ts\" && tsc && custom-elements-manifest analyze --litelement",
+    "clean": "rimraf -g \"./{exports,internal}/**/*.d.ts\"",
+    "build": "npm run clean && tsc && custom-elements-manifest analyze --litelement",
     "deploy:patch": "npm run build && npm version patch && npm publish && git push --follow-tags",
     "deploy:minor": "npm run build && npm version minor && npm publish && git push --follow-tags",
     "deploy:major": "npm run build && npm version major && npm publish && git push --follow-tags",
