--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -32,6 +32,6 @@ gem "bridgetown", "~> 1.3"
 # (you can optionally limit this to the "development" group)
 gem "puma", "~> 5.6"
 
-# gem "bridgetown-quick-search", "~> 1.1", :group => :bridgetown_plugins
+gem "bridgetown-quick-search", "~> 1.1"
 
 gem "nokogiri", "~> 1.13"
