--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -22,16 +22,21 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 gem "bridgetown", "~> 1.3"
 
 # Uncomment to add file-based dynamic routing to your project:
-# gem "bridgetown-routes", "~> 1.1.0", group: :bridgetown_plugins
+# gem "bridgetown-routes", "~> 1.3"
 
 # Uncomment to use the Inspectors API to manipulate the output
 # of your HTML or XML resources:
-# gem "nokogiri", "~> 1.13"
+gem "nokogiri", "~> 1.13"
 
 # Puma is a Rack-compatible server used by Bridgetown
 # (you can optionally limit this to the "development" group)
 gem "puma", "~> 5.6"
 
-gem "bridgetown-quick-search", "~> 1.1"
+gem "bridgetown-quick-search", "~> 1.0"
 
-gem "nokogiri", "~> 1.13"
+# gem "asset_mapper", "~> 1.0"
+gem "asset_mapper", path: "../../asset_mapper"
+
+# gem "rack-cors", "~> 2.0"
+
+gem "rack-cors", "~> 2.0"
