--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   ],
   "scripts": {
     "start": "web-dev-server --watch",
-    "start:site": "rimraf ./_site && rollup -wc",
+    "start:docs": "cd docs && overmind start -f Procfile.dev",
     "setup": "pnpm install && cd docs && pnpm install && bundle install",
-    "build:site": "rimraf ./_site && rollup -c",
+    "build:site": "cd docs && pnpm run build",
     "clean": "rimraf -g \"./{exports,internal}/**/*.d.ts\"",
     "build": "npm run clean && tsc && custom-elements-manifest analyze --litelement",
     "deploy:patch": "npm run build && npm version patch && npm publish && git push --follow-tags",
