--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -32,10 +32,10 @@ gem "nokogiri", "~> 1.13"
 # (you can optionally limit this to the "development" group)
 gem "puma", "~> 5.6"
 
-gem "bridgetown-quick-search", "~> 1.0"
+gem "bridgetown-quick-search", "~> 2.0"
 
 # gem "asset_mapper", "~> 1.0"
-gem "asset_mapper", path: "../../asset_mapper"
+gem "asset_mapper", "~> 1.0"
 
 # gem "rack-cors", "~> 2.0"
 
