--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "overmind start -f Procfile.dev",
-    "build": "NODE_ENV=\"production\" pnpm run esbuild && BRIDGETOWN_ENV=\"production\" bundle exec bridgetown build",
+    "build": "NODE_ENV=\"production\" pnpm run esbuild && BRIDGETOWN_ENV=\"production\" bundle exec bridgetown build --skip-frontend",
     "esbuild": "node esbuild.config.js --minify",
     "esbuild-dev": "node esbuild.config.js --watch"
   },
