--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "start": "web-dev-server --watch",
-    "start:docs": "cd docs && overmind start -f Procfile.dev",
+    "start:docs": "cd docs && bin/bridgetown start",
     "setup": "pnpm install && cd docs && pnpm install && bundle install",
     "build:docs": "cd docs && pnpm run build && touch output/.nojekyll",
     "build:api": "typedoc --out ./docs/output/references/api/ ./exports/**/*.js",
