--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -41,9 +41,11 @@ gem "asset_mapper", "~> 1.0"
 
 gem "rack-cors", "~> 2.0"
 
-gem "custom_elements_manifest_parser", "~> 0.2.4"
+gem "custom_elements_manifest_parser", "~> 0.2.8"
+# gem "custom_elements_manifest_parser", path: "../../custom_elements_manifest_parser"
 
-gem "ruby-lsp", "~> 0.11.1", :group => :development, require: false
-gem "yard", "~> 0.9.34", :group => :development
-gem "solargraph", "~> 0.49.0", :group => :development
 gem "debug", "~> 1.8", :group => :development
+
+gem "solargraph", :group => :development
+gem "yard", "~> 0.9.34", :group => :development
+gem "ffi", "1.16.2"
