--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
     "typescript": "~5.2.0"
   },
   "dependencies": {
-    "highlight.js": "^11.8.0",
+    "@types/prismjs": "^1.26.3",
     "lit": "^2.8.0",
+    "prismjs": "^1.29.0",
     "web-component-define": "^2.0.11"
   },
   "customElements": "custom-elements.json"
