--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "@open-wc/testing": "^4.0.0",
     "@open-wc/testing-helpers": "^2.3.0",
     "@types/node": "^20.8.0",
-    "@types/prismjs": "^1.26.3",
     "@web/test-runner": "^0.17.1",
     "@web/test-runner-commands": "^0.9.0",
     "@web/test-runner-playwright": "^0.10.1",
@@ -71,7 +70,7 @@
   },
   "dependencies": {
     "lit": "^2.8.0",
-    "prismjs": "^1.29.0",
+    "prism-esm": "^1.29.0-fix.1",
     "web-component-define": "^2.0.11"
   },
   "customElements": "custom-elements.json"
