--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@custom-elements-manifest/analyzer": "0.8.4",
+    "@custom-elements-manifest/analyzer": "0.9.0",
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@open-wc/testing": "^4.0.0",
     "@open-wc/testing-helpers": "^2.3.0",
@@ -63,14 +63,14 @@
     "gh-pages": "^6.0.0",
     "glob": "^10.3.10",
     "light-pen": "link:.",
-    "playwright": "^1.40.0",
+    "playwright": "^1.40.1",
     "rimraf": "^5.0.1",
     "typedoc": "^0.25.2",
     "typescript": "~5.2.0"
   },
   "dependencies": {
     "lit": "^2.8.0",
-    "prism-esm": "^1.29.0-fix.1",
+    "prism-esm": "1.29.0-fix.4",
     "web-component-define": "^2.0.11"
   },
   "customElements": "custom-elements.json"
