working on form associated

--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   "dependencies": {
     "lit": "^2.8.0",
     "prism-esm": "1.29.0-fix.4",
-    "web-component-define": "^2.0.11"
+    "web-component-define": "^2.0.11",
+    "form-associated-helpers": "link:../form-associated-helpers"
   },
   "customElements": "custom-elements.json"
 }
