--- a/docs/package.json
+++ b/docs/package.json
@@ -28,6 +28,7 @@
     "@konnorr/bridgetown-quick-search": "^3.8.0",
     "@shoelace-style/shoelace": "^2.7.0",
     "bridgetown-quick-search": "2.0.0",
+    "element-internals-polyfill": "^1.3.10",
     "lit": "^2.8.0",
     "web-component-lazy-loader": "^1.0.1"
   }
