add role-components fixes

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,11 @@ dist
 
 exports/**/*.d.ts
 internal/**/*.d.ts
+!exports/**/*-types.d.ts
+!exports/**/*-globals.d.ts
+!internal/**/*-types.d.ts
+!internal/**/*-globals.d.ts
+
 /custom-elements.json
 /_site
 .DS_Store
