--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "form-associated-helpers": "^0.0.10",
     "lit": "^3.1.4",
     "prism-esm": "1.29.0-fix.4",
+    "role-components": "3.0.0-beta.1",
     "web-component-define": "^2.0.11"
   },
   "customElements": "custom-elements.json"
