adding light-diff-viewer

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:docs": "pnpm run build && cd docs && pnpm run build",
     "build:api": "typedoc --out ./docs/output/references/api/ ./exports/**/*.js",
     "build:api-json": "typedoc --json ./typedoc-generation.json ./exports/**/*.js",
-    "clean": "rimraf -g \"./{exports,internal}/**/!(*-globals|*-types).d.ts\"",
+    "clean": "rimraf -g \"./{exports,internal}/**/*.d.ts\"",
     "build": "npm run clean && tsc && npm run build:cem",
     "create:component": "plop --plopfile scripts/plop/plopfile.js",
     "watch:cem": "custom-elements-manifest analyze --watch",
@@ -73,6 +73,7 @@
     "glob": "^10.4.1",
     "light-pen": "link:.",
     "playwright": "^1.44.1",
+    "plop": "^4.0.1",
     "rimraf": "^5.0.7",
     "typedoc": "^0.26.1",
     "typescript": "~5.5.2"
