--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@esm-bundle/chai": "4.3.4-fix.0",
     "@open-wc/testing": "^4.0.0",
     "@open-wc/testing-helpers": "^3.0.1",
+    "@types/diff": "^5.2.1",
     "@types/node": "^20.14.8",
     "@web/test-runner": "^0.18.2",
     "@web/test-runner-commands": "^0.9.0",
@@ -79,6 +80,8 @@
     "typescript": "~5.5.2"
   },
   "dependencies": {
+    "@open-wc/semantic-dom-diff": "^0.20.1",
+    "diff": "^5.2.0",
     "form-associated-helpers": "^0.0.10",
     "lit": "^3.1.4",
     "prism-esm": "1.29.0-fix.4",
