--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "cem-plugin-expanded-types": "^1.3.1",
     "gh-pages": "^6.3.0",
     "glob": "^10.4.1",
-    "light-pen": "link:.",
+    "light-pen": "file:.",
     "playwright": "^1.44.1",
     "plop": "^4.0.1",
     "prettier": "^3.3.3",
